--- a/_data/javaee.yml
+++ b/_data/javaee.yml
@@ -1,43 +1,7 @@
-- title: Introducción Java
+- title: Introducción Java EE
   docs:
-  - introduccion-java
-  - historia-java
-  - tecnologias-java
-  - instalar-java
-  - mi-primera-aplicacion-java
+  - introduccion-javaee
 
-- title: Conceptos Básicos Java
+- title: Servlets
   docs:
-  - conceptos-basicos-java
-  - variables-java
-  - tipos-datos-primitivos-java
-  - literales-java
-  - expresiones-sentencias-bloques-java
-
-- title: Operadores Java
-  docs:
-  - operadores-asignacion-aritmeticos-java
-  - operadores-unarios-java
-  - operadores-igualdad-relacionales-java
-  - operadores-condicionales-java
-  - operadores-bit-java
-
-- title: Sentencias de Control
-  docs:
-  - sentencias-control-java
-  - sentencias-decision-java
-  - sentencias-bucle-java
-  - sentencias-ramificacion-java
-
-- title: Clase String
-  docs:
-  - clase-string-representando-una-cadena
-  - funciones-basicas-con-cadenas
-
-- title: Arrays Java
-  docs:
-  - arrays-java
-
-- title: Applets Java
-  docs:
-  - applets-java
+  - introduccion-servlets
