--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -8,9 +8,9 @@
 - title: Formularios en HTM5
   docs:
   - formularios-html5
-  - input-formularios-html5
-  - formualarios-html5-datalist
-  
+  - formularios-html5-input
+  - formularios-html5-datalist
+
 - title: APIs HTML5
   docs:
   - fullscreen-api
