Barras de Progreso en HTML5

--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -10,11 +10,13 @@
   - formularios-html5
   - formularios-html5-input
   - formularios-html5-datalist
+  - barras-progreso-html5
 
 - title: APIs HTML5
   docs:
   - fullscreen-api
   - history-api
+  - file-api
 
 - title: Acceso al Dispositivo
   docs:
