--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -10,7 +10,7 @@
   - formularios-html5
   - formularios-html5-input
   - formularios-html5-datalist
-  - barras-progreso-html5
+  - barras-progreso
 
 - title: APIs HTML5
   docs:
