Añadido el elemento output

--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -8,6 +8,7 @@
   - formularios-elementos-input
   - formularios-datalist
   - formularios-barras-progreso
+  - formularios-output
   - formularios-validacion
 
 - title: Multimedia en HTM5
