Añadido gráficos en HTML5

--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -17,6 +17,10 @@
   - video-html5
   - media-formats
 
+- title: Gráficos en HTM5
+  docs:
+  - canvas-html5
+  
 - title: APIs HTML5
   docs:
   - fullscreen-api
