--- a/_data/html5.yml
+++ b/_data/html5.yml
@@ -31,6 +31,7 @@
   docs:
   - introduccion-indexedDB
   - operaciones-basicas-indexedDB
+  - consultas-indexedDB
 
 - title: Rendimiento & Integración
   docs:
