--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -2,3 +2,7 @@
   docs:
   - introduccion-javascript
   - historia-javascript
+  - hola-mundo-javascript
+  - conceptos-basicos-javascript
+  - javascript-vs-java
+  - variables-javascript
