--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -13,9 +13,9 @@
   - estructuras-selectivas-javascript
   - estructuras-repetitivas-javascript
 
--title: funciones
- docs:
- - funciones-javascript
+- title: Funciones
+  docs:
+  - funciones-javascript
 
 - title: Otros
   docs:
