--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -7,6 +7,8 @@
   - variables-javascript
   - literales-javascript
   - javascript-vs-java
+  - numeros-javascript
+  - operadores-javascript
 
 - title: Sentencias de Control
   docs:
