--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -8,12 +8,26 @@
   - literales-javascript
   - javascript-vs-java
   - numeros-javascript
+
+- title: Operadores Javascript
+  docs:
   - operadores-javascript
+  - operadores-asignacion
+  - operadores-comparacion
+  - operadores-aritmeticos
+  - operadores-binarios
+  - operadores-logicos
+  - otros-operadores
 
 - title: Sentencias de Control
   docs:
   - estructuras-selectivas-javascript
   - estructuras-repetitivas-javascript
+
+- title: Cadenas de Texto
+  docs:
+  - cadenas-texto-javascript
+  - objeto-string
 
 - title: Funciones
   docs:
