Inicio Objeto Math y Date

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -40,6 +40,8 @@
   - fechas-javascript
   - errores-javascript
   - promesas-javascript
+  - objeto-math
+  - objeto-date
 
 - title: Contenido de Apoyo
   docs:
