--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -3,6 +3,7 @@
   - introduccion-javascript
   - historia-javascript
   - hola-mundo-javascript
+  - caracteristicas-javascript
 
 - title: Conceptos Básicos
   docs:
