Action en rama master

--- a/.github/workflows/importer.yml
+++ b/.github/workflows/importer.yml
@@ -26,7 +26,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           commit_message: Nuevos Elementos
-          branch: main
+          branch: master
           commit_user_name: importer-bot 🤖
           commit_user_email: actions@github.com
           commit_author: importer-bot 🤖 <actions@github.com>
