--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -4,3 +4,7 @@
   - historia-de-javascript
   - caracteristicas-javascript
   - hola-mundo-javascript
+- title: Conceptos Básicos Javascript
+  docs:
+  - conceptos-basicos-javascript
+  
