--- a/.github/workflows/deploy-to-server.yml
+++ b/.github/workflows/deploy-to-server.yml
@@ -12,6 +12,8 @@ jobs:
     steps:        
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
 
       - name: Setup Ruby and install gems
         uses: ruby/setup-ruby@v1
