--- a/.github/workflows/importer.yml
+++ b/.github/workflows/importer.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
       - uses: actions/setup-node@v3
         with:
           node-version: "17"
@@ -22,8 +24,8 @@ jobs:
           DATABASE_ID: ${{ secrets.DATABASE_ID }}
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          token: ${{ secrets.PAT }}
         with:
           commit_message: Nuevos Elementos
           branch: master
