Error en índice

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -22,7 +22,7 @@
   - operadores-aritmeticos
   - operadores-sobre-bits
   - operadores-logicos
-  - otros-operadores
+  - otros-operadores-javascript
 #  - precedencia-operadores
 
 - title: Sentencias de Control
