--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -28,7 +28,7 @@
 - title: Sentencias de Control
   docs:
   - estructuras-selectivas-javascript
-#  - estructuras-repetitivas-javascript
+  - estructuras-repetitivas-javascript
 
 #- title: Cadenas de Texto
 #  docs:
