cadenas de texto javascript

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -32,8 +32,7 @@
 
 - title: Cadenas de Texto
   docs:
-  - objeto-string
-#  - cadenas-texto-javascript
+  - cadenas-de-texto-javascript
 
 #- title: Funciones
 #  docs:
