búsquedas en cadenas

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -33,6 +33,7 @@
 - title: Cadenas de Texto
   docs:
   - cadenas-de-texto-javascript
+  - busquedas-en-cadenas-de-texto
 
 #- title: Funciones
 #  docs:
