manipular cadenas de texto

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -34,6 +34,7 @@
   docs:
   - cadenas-de-texto-javascript
   - busquedas-en-cadenas-de-texto
+  - manipular-cadenas-de-texto
 
 #- title: Funciones
 #  docs:
