Convertir cadenas de testo

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -35,6 +35,7 @@
   - cadenas-de-texto-javascript
   - busquedas-en-cadenas-de-texto
   - manipular-cadenas-de-texto
+  - convertir-cadenas-de-texto
 
 #- title: Funciones
 #  docs:
