comversion y comprobación números en js

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -40,6 +40,10 @@
 - title: Números
   docs:
   - numeros-javascript
+#  - objeto-number
+  - comprobar-numeros-javascript
+  - conversiones-con-numeros-javascript
+#  - precision-decimales-en-javascript
 
 #- title: Funciones
 #  docs:
