--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -43,7 +43,7 @@
   - objeto-number
   - comprobar-numeros-javascript
   - conversiones-con-numeros-javascript
-#  - precision-decimales-en-javascript
+  - precision-decimales-en-javascript
 
 #- title: Funciones
 #  docs:
