--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -11,7 +11,6 @@
   - variables-javascript
   - tipos-variables-javascript
   - literales-javascript
-#  - fechas-javascript
 
 - title: Operadores Javascript
   docs:
@@ -48,6 +47,10 @@
   - operaciones-avanzadas-del-objeto-math
   - logaritmos-y-exponenciales
   - operaciones-trigonometricas-e-hiperbolicas
+
+#- title: Fechas
+#  docs:
+#  - fechas-javascript
 
 #- title: Funciones
 #  docs:
