parámetros en funciones

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -55,7 +55,7 @@
 - title: Funciones
   docs:
   - funciones-javascript
-#  - parametros-en-funciones
+  - parametros-en-funciones
 #  - expresiones-de-funcion
 #  - closures-javascript
 #  - funciones-anonimas
