Expresiones de función

--- a/_data/javascript.yml
+++ b/_data/javascript.yml
@@ -56,7 +56,7 @@
   docs:
   - funciones-javascript
   - parametros-en-funciones
-#  - expresiones-de-funcion
+  - expresiones-de-funcion
 #  - closures-javascript
 #  - funciones-anonimas
 #  - patron-modulo
