Cambio indice Dart

--- a/_data/dart.yml
+++ b/_data/dart.yml
@@ -1,7 +1,7 @@
 - title: Introducción Dart
   docs:
   - introduccion-dart
-  - historia-dart
+  - historia-de-dart
   - librerias-dart
   - instalar-dart
   - mi-primera-aplicacion-dart
