--- a/_data/dart.yml
+++ b/_data/dart.yml
@@ -1,8 +1,8 @@
 - title: Introducción Dart
   docs:
-  - introduccion-dart
+  - introduccion-a-dart
   - historia-de-dart
   - librerias-dart
   - instalar-dart
-  - mi-primera-aplicacion-dart
+  - mi-primera-aplicacion-en-dart
   #- editores-de-codigo-dart
