Diccionarios en PHP

--- a/_data/php.yml
+++ b/_data/php.yml
@@ -5,6 +5,7 @@
   docs:
   - arrays-en-php
   - manejar-arrays-en-php
+  - diccionarios-en-php
 - title: Programación Orientada a Objetos (POO)
   docs:
   - programacion-orientada-a-objetos-en-php
